--- a/public/CSS/mining.css
+++ b/public/CSS/mining.css
@@ -659,7 +659,7 @@ div.image {
 }​
 
 div.imageBck {
-   content:url("/backImg.png");
+   content:url("/backImg.PNG");
 }​
 
 .mining-heading-CNR{
@@ -681,7 +681,7 @@ div.imageBck {
   bottom: 0;
   left: 0;
   right: 0;
-  background-image: url('/Images/backImg.png');
+  background-image: url('/Images/backImg.PNG');
   opacity: 1;
     width: 100%;
     height: 100%;
